--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,11 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # mod version info
-mod_version = 1.0.0
+mod_version=0.0.1.h
+modid=create_mechanical_spawner
+author=oierbravo
+display_name=Create: Mechanical spawner
+
 artifact_minecraft_version = 1.19.2
 minecraft_version = 1.19.2
 forge_version = 43.1.52
@@ -22,7 +26,14 @@ create_version = 0.5.0.h-21
 flywheel_minecraft_version = 1.19.2
 flywheel_version = 0.6.8.a-14
 registrate_version = MC1.19-1.1.5
+
 jei_minecraft_version = 1.19.2
 jei_version = 11.2.0.254
 curios_minecraft_version = 1.19.2
 curios_version = 5.1.1.0
+
+jade_id = 3960379
+
+architectury_version=6.2.46
+rhino_version=1902.2.2-build.263
+kubejs_version=1902.6.0-build.140
