--- a/gradle.properties
+++ b/gradle.properties
@@ -22,8 +22,8 @@ parchment_version = 2022.11.06
 
 # dependency versions
 create_minecraft_version = 1.19.2
-create_version = 0.5.0.h-21
 flywheel_minecraft_version = 1.19.2
+create_version = 0.5.0.i-23
 flywheel_version = 0.6.8.a-14
 registrate_version = MC1.19-1.1.5
 
