--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,6 @@
 modLoader="javafml" #mandatory
 loaderVersion="[40,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
-license="All rights reserved"
+license="MIT"
 [[mods]] #mandatory
 modId="create_mechanical_spawner" #mandatory
 version="${file.jarVersion}" #mandatory
@@ -41,6 +41,6 @@ side="BOTH"
 [[dependencies.create_mechanical_spawner]]
     modId="create"
     mandatory=true
-    versionRange="[0.5.0.i,)"
+    versionRange="[0.5.0.i,0.5.1)"
     ordering="NONE"
     side="BOTH"
