--- a/gradle.properties
+++ b/gradle.properties
@@ -3,28 +3,29 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
+cursegradle_version = 1.4.0
 # mod version info
-mod_version=0.0.6.i
+mod_version=0.0.7.c-36
 modid=create_mechanical_spawner
 author=oierbravo
 display_name=Create: Mechanical spawner
 
 artifact_minecraft_version = 1.19.2
 minecraft_version = 1.19.2
-forge_version = 43.1.52
+forge_version = 43.2.4
 
 # build dependency versions
-forgegradle_version = 5.1.53
+forgegradle_version = 5.1.74
 mixingradle_version = 0.7-SNAPSHOT
 mixin_version = 0.8.5
 librarian_version = 1.+
-parchment_version = 2022.11.06
+parchment_version = 2022.11.27
 
 # dependency versions
 create_minecraft_version = 1.19.2
 flywheel_minecraft_version = 1.19.2
-create_version = 0.5.0.i-23
-flywheel_version = 0.6.8.a-14
+create_version = 0.5.1.c-36
+flywheel_version = 0.6.9-18
 registrate_version = MC1.19-1.1.5
 
 jei_minecraft_version = 1.19.2
@@ -34,6 +35,7 @@ curios_version = 5.1.1.0
 
 jade_id = 3960379
 
-architectury_version=6.2.46
-rhino_version=1902.2.2-build.264
-kubejs_version=1902.6.0-build.142
+architectury_version=6.5.85
+rhino_version=1902.2.2-build.269
+kubejs_version=1902.6.1-build.300
+kubejs_create_version=1902.2.4-build.20
