--- a/gradle.properties
+++ b/gradle.properties
@@ -3,39 +3,39 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-cursegradle_version = 1.4.0
+use_parchment = true
+
 # mod version info
-mod_version=0.0.7.c-36
+mod_version=0.0.7.d-9
 modid=create_mechanical_spawner
 author=oierbravo
 display_name=Create: Mechanical spawner
 
-artifact_minecraft_version = 1.19.2
-minecraft_version = 1.19.2
-forge_version = 43.2.4
+minecraft_version = 1.20.1
+forge_version = 47.0.43
 
 # build dependency versions
-forgegradle_version = 5.1.74
+forgegradle_version = 6.0.6
 mixingradle_version = 0.7-SNAPSHOT
 mixin_version = 0.8.5
 librarian_version = 1.+
-parchment_version = 2022.11.27
+cursegradle_version = 1.4.0
+parchment_version = 2023.06.26
 
 # dependency versions
-create_minecraft_version = 1.19.2
-flywheel_minecraft_version = 1.19.2
-create_version = 0.5.1.c-36
-flywheel_version = 0.6.9-18
-registrate_version = MC1.19-1.1.5
+create_minecraft_version = 1.20.1
+flywheel_minecraft_version = 1.20
+create_version = 0.5.1.d-9
+flywheel_version = 0.6.9-4
+registrate_version = MC1.20-1.3.3
 
-jei_minecraft_version = 1.19.2
-jei_version = 11.2.0.254
-curios_minecraft_version = 1.19.2
-curios_version = 5.1.1.0
+jei_minecraft_version = 1.20.1
+jei_version = 15.2.0.22
+curios_minecraft_version = 1.20.1
+curios_version = 5.2.0-beta.3
 
-jade_id = 3960379
+jade_id = 4654448
 
-architectury_version=6.5.85
-rhino_version=1902.2.2-build.269
-kubejs_version=1902.6.1-build.300
-kubejs_create_version=1902.2.4-build.20
+cc_tweaked_enable = false
+cc_tweaked_minecraft_version = 1.20.1
+cc_tweaked_version = 1.105.0
