--- a/build.gradle
+++ b/build.gradle
@@ -177,6 +177,8 @@ dependencies {
     implementation fg.deobf("dev.architectury:architectury-forge:${architectury_version}")
     implementation fg.deobf("dev.latvian.mods:kubejs-forge:${kubejs_version}")
 
+    implementation fg.deobf("curse.maven:probejs-585406:${probejs_id}")
+
     implementation fg.deobf("curse.maven:jade-324717:${jade_id}")
 
     // For more info...
