--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,5 +1,5 @@
 name: Bug Report
-description: Create a bug report to help us improve Create
+description: Create a bug report to help improve Create Mechanical Spawner
 labels: [ "type: bug" ]
 body:
     -   type: textarea
@@ -49,64 +49,8 @@ body:
             label: Mod Version
             description: The version of the mod you were using when the bug occured
             options:
-                - "0.5.1b"
-                - "0.5.1a"
-                - "0.5.0i"
-                - "0.5.0h"
-                - "0.5.0g"
-                - "0.5.0f"
-                - "0.5.0e"
-                - "0.5.0d"
-                - "0.5.0c"
-                - "0.5.0b"
-                - "0.5.0a"
-                - "0.5.0"
-                - "0.4.1"
-                - "0.4.0f"
-                - "0.4.0e"
-                - "0.4.0d"
-                - "0.4.0c"
-                - "0.4.0b"
-                - "0.4.0a"
-                - "0.4.0"
-                - "0.3.2g"
-                - "0.3.2f"
-                - "0.3.2e"
-                - "0.3.2d"
-                - "0.3.2c"
-                - "0.3.2b"
-                - "0.3.2a"
-                - "0.3.2"
-                - "0.3.1c"
-                - "0.3.1b"
-                - "0.3.1a"
-                - "0.3.1"
-                - "0.3.0e"
-                - "0.3.0d"
-                - "0.3.0c"
-                - "0.3.0b"
-                - "0.3.0a"
-                - "0.3.0"
-                - "0.2.4e"
-                - "0.2.4d"
-                - "0.2.4c"
-                - "0.2.4b"
-                - "0.2.4a"
-                - "0.2.4"
-                - "0.2.3"
-                - "0.2.2b"
-                - "0.2.2a"
-                - "0.2.2"
-                - "0.2.1"
-                - "0.2.0"
-                - "0.1.1a"
-                - "0.1.1"
-                - "0.1.0"
-                - "0.0.5"
-                - "0.0.4"
-                - "0.0.3"
-                - "0.0.2"
-                - "0.0.1"
+                - "0.0.9.c-36"
+                - "0.0.8.b-36"
         validations:
             required: true
     -   type: dropdown
@@ -115,15 +59,6 @@ body:
             description: The version of Minecraft you were using when the bug occured
             options:
                 - "1.19.2"
-                - "1.18.2"
-                - "1.18.1"
-                - "1.18"
-                - "1.17.1"
-                - "1.16.5"
-                - "1.16.4"
-                - "1.16.3"
-                - "1.15.2"
-                - "1.14.4"
         validations:
             required: true
     -   type: input
