--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
 
 plugins {
     id 'com.matthewprenger.cursegradle' version "${cursegradle_version}"
+    id "com.modrinth.minotaur" version "2.+"
 }
 
 apply plugin: 'net.minecraftforge.gradle'
@@ -209,10 +210,24 @@ jar {
         ])
     }
 }
+if(System.getenv('MODRINTH_TOKEN') != null) {
 
-afterEvaluate {
-    tasks.configureReobfTaskForReobfJar.mustRunAfter(tasks.compileJava)
-    tasks.configureReobfTaskForReobfJarJar.mustRunAfter(tasks.compileJava)
+    modrinth {
+        token = System.getenv("MODRINTH_TOKEN")
+        projectId = "create-mechanical-spawner"
+        versionNumber = "${version}"
+        versionName = "${display_name} - v${mod_version} for Minecraft ${minecraft_version}"
+        versionType = "release" // This is the default -- can also be `beta` or `alpha`
+        uploadFile = tasks.jar // With Loom, this MUST be set to `remapJar` instead of `jar`!
+        gameVersions = ["${minecraft_version}"] // Must be an array, even with only one version
+        loaders = ["forge"] // Must also be an array - no need to specify this if you're using Loom or ForgeGradle
+        dependencies { // A special DSL for creating dependencies
+            optional.project "kubejs"
+            optional.project "jei"
+            required.project "create"
+        }
+        changelog = rootProject.file("changes/${minecraft_version}-${mod_version}.md").text
+    }
 }
 
 tasks.withType(JavaCompile).configureEach {
