--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.daemon=false
 use_parchment = true
 
 # mod version info
-mod_version=0.0.11.d-9
+mod_version=0.0.12.d-9
 modid=create_mechanical_spawner
 author=oierbravo
 display_name=Create: Mechanical spawner
@@ -44,3 +44,6 @@ architectury_version=9.1.12
 rhino_version=2001.2.2-build.6
 kubejs_version=2001.6.3-build.23
 mixin_extras=0.2.0-beta.9
+
+curseforge_id = 821828
+modrinth_id = T1hmeGi9
