--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,7 @@
+pluginManagement {
+    repositories {
+        maven { url "https://maven.architectury.dev/" }
+        gradlePluginPortal()
+    }
+}
 rootProject.name = 'Create Mechanical Spawner'
