--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.daemon=false
 
 cursegradle_version = 1.4.0
 # mod version info
-mod_version=0.0.10.c-36
+mod_version=0.0.11.c-36
 modid=create_mechanical_spawner
 author=oierbravo
 display_name=Create: Mechanical spawner
@@ -40,3 +40,6 @@ rhino_version=1902.2.2-build.269
 kubejs_version=1902.6.1-build.300
 kubejs_create_version=1902.2.4-build.20
 probejs_id=4658184
+
+curseforge_id = 821828
+modrinth_id = T1hmeGi9
