--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.daemon=false
 use_parchment = true
 
 # mod version info
-mod_version=0.0.13.d-9
+mod_version=0.0.14.e-22
 modid=create_mechanical_spawner
 author=oierbravo
 display_name=Create: Mechanical spawner
@@ -24,9 +24,9 @@ parchment_version = 2023.06.26
 
 # dependency versions
 create_minecraft_version = 1.20.1
-flywheel_minecraft_version = 1.20
-create_version = 0.5.1.d-9
-flywheel_version = 0.6.9-4
+flywheel_minecraft_version = 1.20.1
+create_version = 0.5.1.e-22
+flywheel_version = 0.6.10-7
 registrate_version = MC1.20-1.3.3
 
 jei_minecraft_version = 1.20.1
