--- a/gradle.properties
+++ b/gradle.properties
@@ -6,27 +6,27 @@ org.gradle.daemon=false
 use_parchment = true
 
 # mod version info
-mod_version=0.0.15.f-26
+mod_version=0.0.15.h-48
 modid=create_mechanical_spawner
 author=oierbravo
 display_name=Create: Mechanical spawner
 
 minecraft_version = 1.20.1
-forge_version = 47.0.43
+forge_version = 47.2.6
 
 # build dependency versions
-forgegradle_version = 6.0.6
-mixingradle_version = 0.7-SNAPSHOT
+forgegradle_version = [6.0.16,6.2)
+mixingradle_version = 0.7.+
 mixin_version = 0.8.5
 librarian_version = 1.+
 cursegradle_version = 1.4.0
-parchment_version = 2023.06.26
+parchment_version = 2023.09.03
 
 # dependency versions
 create_minecraft_version = 1.20.1
 flywheel_minecraft_version = 1.20.1
-create_version = 0.5.1.f-26
-flywheel_version = 0.6.10-7
+create_version = 0.5.1.h-48
+flywheel_version = 0.6.11-13
 registrate_version = MC1.20-1.3.3
 
 jei_minecraft_version = 1.20.1
@@ -35,7 +35,7 @@ curios_minecraft_version = 1.20.1
 curios_version = 5.2.0-beta.3
 
 jade_id = 4654448
-
+jeiresources_id = 5057220
 cc_tweaked_enable = false
 cc_tweaked_minecraft_version = 1.20.1
 cc_tweaked_version = 1.105.0
