--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.daemon=false
 use_parchment = true
 
 # mod version info
-mod_version=0.0.16.h-48
+mod_version=0.0.17.h-48
 modid=create_mechanical_spawner
 author=oierbravo
 display_name=Create: Mechanical spawner
@@ -39,6 +39,8 @@ jeiresources_id = 5057220
 cc_tweaked_enable = false
 cc_tweaked_minecraft_version = 1.20.1
 cc_tweaked_version = 1.105.0
+enchantment_industry_enable = true
+enchantment_industry_id = 5331908
 
 architectury_version=9.1.12
 rhino_version=2001.2.2-build.6
